# gradle-util-rs

./: COPYRIGHT  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: chver.rs  lib.rs  set_new.rs  update.rs  utils.rs
src/templates/: args.rs  git_ignore.rs  gitattributes.rs  grpc_vertx_kotlin.rs  kotlin_project.rs  mod.rs  project.rs  template_file.rs
src/templates/args/: default_package.rs
src/update/: tests.rs  version.rs
templates/: grpc-vertx-kotlin.toml  kotlin-js-browser.toml  kotlin-multi-project.toml  kotlin-project.toml  project.toml
