[package]
name = "gradle-util-rs"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Gradle util written in Rust"
repository = "https://github.com/jason5lee/gradle-util-rs"
license = "MIT OR Apache-2.0"
keywords = [ "gradle" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
notify = "4.0"
env_logger = "0.9"
clap = { version = "3.0", features = ["derive"] }
humantime = "2.1"

[[bin]]
name = "gur"
