[package]
name = "gradle-util-rs"
version = "0.1.0-alpha.7"
edition = "2021"
description = "Gradle util written in Rust"
repository = "https://github.com/jason5lee/gradle-util-rs"
license = "MIT OR Apache-2.0"
keywords = [ "gradle" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
notify = "4.0"
env_logger = "0.9"
clap = { version = "3.0", features = ["derive"] }
humantime = "2.1"
apply = "0.3"
walkdir = "2.3"
pathdiff = "0.2"
fxhash = "0.2"
indexmap = { version = "1.8", features = [ "std", "serde" ] }
termcolor = "1.1"
chrono = "0.4"
phf = { version = "0.10", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"
toml = "0.5"
anyhow = "1.0"

[[bin]]
name = "gur"
