[package]
name = "gradle-util-rs"
version = "0.1.0-alpha.7"
edition = "2021"
description = "Gradle util written in Rust"
repository = "https://github.com/jason5lee/gradle-util-rs"
license = "MIT OR Apache-2.0"
keywords = [ "gradle" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0"
clap = { version = "3.0", features = ["derive"] }
humantime = "2.1"
termcolor = "1.1"
chrono = "0.4"
toml = "0.5"
anyhow = "1.0"

[[bin]]
name = "gur"
